# airdec-workflows

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  config.py  dependencies.py  main.py  tenants.py  workers.py
app/cli/: main.py
app/database/: models.py  session.py
app/routers/: workflows.py
app/workflows/: extract_metadata_workflow.py
tests/: conftest.py  test_auth.py
